Beta (#16)
* Generalize the algo to allow incremental adding of edges for existing node.

* Update MaximumMatching.java

* Refactoring of expectation node to get linked directly with the expectation, not only it's description.